[Step2] 김덕윤(duke.yun) 레거시 코드 리팩터링 (#69)
* test: add SpringBootTest integration tests for order flow

주문 생성의 핵심 시나리오(정상/재고부족/포인트부족/위시자동제거)를
@SpringBootTest + RestAssured + @Sql 전략으로 검증한다.
포인트 부족 시 재고가 롤백되지 않는 버그를 RED 테스트로 문서화한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* docs(adr): add ADR-001 transaction boundary strategy

OrderService.createOrder()을 단일 트랜잭션으로 묶는 결정과
카카오 메시지 발송을 트랜잭션 내부에 유지하는 trade-off를 문서화한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(order): add @Transactional to OrderService.createOrder()

재고 차감 + 포인트 차감 + 주문 저장이 원자적으로 처리되도록 한다.
포인트 부족 시 이미 커밋된 재고 차감이 롤백되지 않던 버그를 수정한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(service): add @Transactional to OptionService and WishService

OptionService.create/delete, WishService.addWishIdempotent/removeWish에
명시적 트랜잭션 경계를 추가하여 쓰기 연산의 원자성을 보장한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(order): auto-remove wish on order creation

주문 완료 시 해당 상품을 위시리스트에서 자동으로 제거한다.
FEATURES.md에 "(미구현)"으로 기록된 기능을 구현한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* feat(order): return 400 Bad Request for IllegalArgumentException

재고 부족/포인트 부족 시 500 Internal Server Error 대신
400 Bad Request를 반환하도록 OrderController에 예외 핸들러를 추가한다.
Cucumber 시나리오의 기대 상태 코드를 500에서 400으로 변경한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* refactor(product): move name validation into ProductService

ProductController/AdminProductController의 중복된 검증 로직을
ProductService.create/update로 통합한다.
allowKakao 파라미터로 API(false)와 관리자 화면(true)의 검증 수준을 구분한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* refactor(domain): add matchesPassword() and belongsTo() domain methods

Member.matchesPassword()로 비밀번호 비교를, Wish.belongsTo()로 소유권 검증을
도메인 객체가 직접 처리하게 한다. Tell Don't Ask 원칙을 적용한다.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* refactor: remove redundant repo.save() calls and unify price calculation

@Transactional 내 managed 엔티티