@@ -1,6 +1,9 @@
 package gift.order;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import gift.product.Product;
+import java.util.Map;
 import org.springframework.stereotype.Component;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.web.client.RestClient;
@@ -8,9 +11,11 @@ import org.springframework.web.client.RestClient;
 @Component
 public class KakaoMessageClient {
     private final RestClient restClient;
+    private final ObjectMapper objectMapper;
 
-    public KakaoMessageClient(RestClient.Builder builder) {
+    public KakaoMessageClient(RestClient.Builder builder, ObjectMapper objectMapper) {
         this.restClient = builder.build();
+        this.objectMapper = objectMapper;
     }
 
     public void sendToMe(String accessToken, Order order, Product product) {
@@ -29,23 +34,30 @@ public class KakaoMessageClient {
     }
 
     private String buildTemplate(Order order, Product product) {
-        var totalPrice = String.format("%,d", product.getPrice() * order.getQuantity());
-        var message = order.getMessage() != null && !order.getMessage().isBlank()
-            ? "\\n\\n💌 " + order.getMessage()
-            : "";
-        return """
-            {
-                "object_type": "text",
-                "text": "🎁 선물이 도착했어요!\\n\\n%s (%s)\\n수량: %d개\\n금액: %s원%s",
-                "link": {},
-                "button_title": "선물 확인하기"
-            }
-            """.formatted(
-            product.getName(),
-            order.getOption().getName(),
-            order.getQuantity(),
-            totalPrice,
-            message
-        );
+        var totalPrice = String.format("%,d", order.getOption().calculateTotalPrice(order.getQuantity()));
+        var messageText = buildMessageText(order, product, totalPrice);
+
+        try {
+            return objectMapper.writeValueAsString(Map.of(
+                "object_type", "text",
+                "text", messageText,
+                "link", Map.of(),
+                "button_title", "선물 확인하기"
+            ));
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException("카카오 메시지 템플릿 생성 실패", e);
+        }
+    }
+
+    private String buildMessageText(Order order, Product product, String totalPrice) {
+        String messageBody = "🎁 선물이 도착했어요!\n\n"
+            + product.getName() + " (" + order.getOption().getName() + ")\n"
+            + "수량: " + order.getQuantity() + "개\n"
+            + "금액: " + totalPrice + "원";
+
+        if (order.getMessage() != null && !order.getMessage().isBlank()) {
+            messageBody += "\n\n💌 " + order.getMessage();
+        }
+        return messageBody;
     }
 }
